samples/_failures_safe/1761320882_3650cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3dc429b0.c: In function ‘main’:
./samples/SAFE/__tmp_3dc429b0.c:172:13: error: expected declaration or statement at end of input
  172 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_3dc429b0.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3dc429b0.c:172:13: error: expected declaration or statement at end of input
